err/plonetheme.solemnity.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plonetheme'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/browser'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/browser/images'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/browser/stylesheets'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/browser/templates'...
Compiling './lib/python3.5/site-packages/plonetheme/solemnity/browser/viewlets.py'...
***   File "./lib/python3.5/site-packages/plonetheme/solemnity/browser/viewlets.py", line 19
    \#    def update(self):
                          ^
SyntaxError: unexpected character after line continuation character

Listing './lib/python3.5/site-packages/plonetheme/solemnity/profiles'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/profiles/default'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/skins'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/skins/plonetheme_solemnity_custom_images'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/skins/plonetheme_solemnity_custom_templates'...
Listing './lib/python3.5/site-packages/plonetheme/solemnity/skins/plonetheme_solemnity_styles'...
Listing './lib/python3.5/site-packages/plonetheme.solemnity-0.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
